2010-07-06  Robert Larice
 * src/main.c ,
 * src/frontend/nutmegif.c ,
 * src/frontend/nutmegif.h ,
 * src/frontend/shyu.c ,
 * src/frontend/shyu.h ,
 * src/frontend/spiceif.c ,
 * src/frontend/spiceif.h ,
 * src/include/fteext.h :
        fix the type signature of the if_*() family of functions.
        some incompatible pointer passing warnings will pop up,
          and will be fixed later.

2010-07-06  Robert Larice
 * src/include/typedefs.h :
        new include file for struct forward declarations and for typedefs
 * src/include/cktdefs.h ,
 * src/include/gendefs.h ,
 * src/include/graph.h ,
 * src/include/ifsim.h ,
 * src/include/mifcmdat.h ,
 * src/include/ngspice.h ,
 * src/include/tfdefs.h :
        make use of the new include file.

2010-07-06 Holger Vogt
 * defines.h: void fcn prototype instead of sighandler_t 
   for MINGW, CYGWIN and MSC
 * src/spectrum: update of script with explanations
 * b4soild.c: debug warnings removed 

2010-07-05  Robert Larice
 * src/xspice/cmpp/writ_ifs.c :
        add initialization of the struct IFdevice.flags element to the
        generated code.  We initialize to 0, which is what the C compiler
        used as default so far.

2010-07-05  Robert Larice
 * src/xspice/icm/analog/d_dt/cfunc.mod ,
 * src/xspice/icm/analog/hyst/cfunc.mod ,
 * src/xspice/icm/analog/int/cfunc.mod ,
 * src/xspice/icm/analog/oneshot/cfunc.mod ,
 * src/xspice/icm/analog/s_xfer/cfunc.mod ,
 * src/xspice/icm/analog/sine/cfunc.mod ,
 * src/xspice/icm/analog/slew/cfunc.mod ,
 * src/xspice/icm/analog/square/cfunc.mod ,
 * src/xspice/icm/analog/triangle/cfunc.mod ,
 * src/xspice/icm/digital/adc_bridge/cfunc.mod ,
 * src/xspice/icm/digital/d_osc/cfunc.mod ,
 * src/xspice/icm/digital/dac_bridge/cfunc.mod ,
 * src/xspice/icm/xtradev/capacitor/cfunc.mod ,
 * src/xspice/icm/xtradev/core/cfunc.mod ,
 * src/xspice/icm/xtradev/inductor/cfunc.mod ,
 * src/xspice/icm/xtradev/lcouple/cfunc.mod ,
 * src/xspice/icm/xtraevt/real_delay/cfunc.mod ,